--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "resend": "^4.0.0"
     "express": "^5.1.0",
     "nodemailer": "^7.0.10"
   }
