--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yavuzel-mail-api",
   "version": "1.0.0",
-  "description": "YAVUZEL paneli için e-posta doğrulama kodu gönderen basit mail API",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,8 +14,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "resend": "^4.0.0"
     "express": "^5.1.0",
-    "nodemailer": "^7.0.10"
+    "resend": "^4.0.0"
   }
 }
