--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "yavuzel-mail-api",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "Yavuzel Mali Müşavirlik - Mail Verification API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "mail",
+    "verification",
+    "nodemailer",
+    "hostinger"
+  ],
+  "author": "Aytaç Yavuzel",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "resend": "^4.0.0"
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.7",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
