--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install"
   },
   "keywords": [
     "mail",
@@ -17,13 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.8",
     "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
