--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "yavuzel-mail-api",
-  "version": "2.0.0",
-  "description": "Yavuzel Mali Müşavirlik - Mail Verification API",
+  "name": "yavuzel-backend",
+  "version": "3.3.0",
+  "description": "Unified Backend - Mail API + Mali Veri API",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [
-    "mail",
-    "verification",
-    "nodemailer",
-    "hostinger"
-  ],
+  "keywords": ["otp", "mail", "pdf", "financial"],
   "author": "Aytaç Yavuzel",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
+    "@supabase/supabase-js": "^2.39.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "bcryptjs": "^2.4.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "pdf-parse": "^1.1.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
