--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "yavuzel-backend",
-  "version": "3.3.0",
-  "description": "Unified Backend - Mail API + Mali Veri API",
+  "version": "3.5.0",
+  "description": "Unified Backend - Mail API + Mali Veri API + Accounting API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": ["otp", "mail", "pdf", "financial"],
+  "keywords": ["otp", "mail", "pdf", "financial", "accounting"],
   "author": "Aytaç Yavuzel",
   "license": "MIT",
   "dependencies": {
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "xlsx": "^0.18.5"
   },
   "engines": {
     "node": ">=18.0.0"
