--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pdfjs-dist": "^3.11.174"
+    "pdfjs-dist": "^3.11.174",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
